--- a/plugins/redmine_zz5/app/views/workdays/_saved_msg.json.erb
+++ b/plugins/redmine_zz5/app/views/workdays/_saved_msg.json.erb
@@ -1,5 +1,6 @@
 {
     "id": "<%= @te_id %>",
     "carry": "<%= @carry %>",
-    "vacation": "<%= @vacation %>"
+    "vacation": "<%= @vacation %>",
+    "be_id": "<%= @be_id %>"
 }
