--- a/plugins/redmine_zz5/app/views/workdays/_times_row.html.erb
+++ b/plugins/redmine_zz5/app/views/workdays/_times_row.html.erb
@@ -1,4 +1,4 @@
-<div class="worktimes-row <%=id%>">
+<div class="times-row <%=id%>">
     <div class='time-title'><%= title %>
     </div>
   <div class="times">
@@ -11,7 +11,7 @@
                 <div class="time-right">
                     <img title="<%= warningMsg %>" class="img-warning" id="{{day.id}}_error"
                             src="/plugin_assets/redmine_zz5/images/warning.png"
-                            ng-show="<%= warningType %>">
+                                ng-show="<%= warningType %> && !alt_worktimes">
                 </div>
             </div>
         </div>
