--- a/public/plugin_assets/redmine_zz5/stylesheets/workdays_angular.css
+++ b/public/plugin_assets/redmine_zz5/stylesheets/workdays_angular.css
@@ -122,6 +122,15 @@ div.worktimes-row {
     min-height: 34px;
 }
 
+div.times-row {
+    font-size: 14px;
+    width: 100%;
+    display: inline-block;
+    margin-top: 2px;
+    margin-bottom: 2px;
+    min-height: 34px;
+}
+
 div.absences-container {
     box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4);
     width: 98.8%;
