Angemeldet bleiben Angemeldet bleiben

--- a/app/views/auth_sources/_form_auth_source_ldap.html.erb
+++ b/app/views/auth_sources/_form_auth_source_ldap.html.erb
@@ -4,7 +4,7 @@
   <p><%= f.text_field :name, :required => true %></p>
   <p><%= f.text_field :host, :required => true %></p>
   <p><%= f.text_field :port, :required => true, :size => 6 %> <%= f.check_box :tls, :no_label => true %> LDAPS</p>
-  <p><%= f.text_field :account %></p>
+  <p><%= f.text_field :mtr_account %></p>
   <p><%= f.password_field :account_password, :label => :field_password,
            :name => 'dummy_password',
            :value => ((@auth_source.new_record? || @auth_source.account_password.blank?) ? '' : ('x'*15)),
