--- a/plugins/redmine_mtr/app/views/mtr_account/loginMtr.html.erb
+++ b/plugins/redmine_mtr/app/views/mtr_account/loginMtr.html.erb
@@ -26,7 +26,7 @@
                                                :class => 'login-input', :style => 'width: 100%'%>
                     </div>
                     <div style="padding-top: 5px;">
-                        <input type="submit" style="height: 38px" class="form-control input-lg btn btn-danger" name="login" value="<%=l(:button_login)%> &#187;" tabindex="5"/>
+                        <input type="submit" style="height: 38px" class="form-control input-lg btn btn-danger" name="loginMtr" value="<%=l(:button_login)%> &#187;" tabindex="5"/>
                     </div>
                     <div style="padding-top: 5px;">
                         <label for="autologin"><%= check_box_tag 'autologin', 1, false, :tabindex => 4 %> <%= l(:label_stay_logged_in) %></label>
