--- a/plugins/redmine_mtr/assets/stylesheets/menu.css
+++ b/plugins/redmine_mtr/assets/stylesheets/menu.css
@@ -1,142 +1,105 @@
-html {
-    overflow-y: scroll;
+/* Base */
+
+html, body {
+	margin: 0;
+	padding: 0;
+	height: 100%;
+
+	background: #333; /* Same color as your menu */
+	font-family: Helvetica, Arial, sans-serif;
 }
 
-/*
-Setup a basic body
+#page {
+	position: relative; /* Set the position property so z-index will apply */
+	z-index: 20; /* Make sure this is higher than #menu */
+
+	padding: 20px;
+
+	background: #fff;
+	height: 100%;
+}
+
+#page h1 {
+	margin: 0;
+}
+
+#toggle-menu {
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	padding: 15px 10px;
+	border: 1px solid #eee;
+}
+
+#menu {
+	display: none;
+	position: absolute;
+	top: 0;
+	right: 0;
+
+	width: 190px;
+	padding: 15px 25px;
+	margin: 0;
+
+	list-style: none;
+	background: #333;
+	z-index: 10; /* Make sure the z-index is lower than the #page */
+}
+
+#menu a {
+	display: block;
+	color: #fff;
+	padding: 15px 0;
+	border-bottom: 1px solid rgba( 255, 255, 255, 0.05 );
+}
+
+/* Animations */
+
+#page, #menu {
+	-webkit-backface-visibility: hidden;
+	-webkit-perspective: 1000;
+}
+
+/* Hide the menu unless it's animating or visible */
+.animating #menu, .menu-visible #menu {
+	display: block;
+}
+
+/***
+* If the animating class is present then apply
+* the CSS transition to #page over 250ms.
 */
-body {
-    margin: 0;
-    padding: 0;
-    overflow-x: hidden;
-    font-family: Arial;
-    font-size: 18px;
+.animating #page {
+	transition: transform .25s ease-in-out;
+	-webkit-transition: -webkit-transform .25s ease-in-out;
 }
 
-/*
-Header is relative so z-index: 1 guarantees always displayed on top
+/***
+* If the left class is present then transform
+* the #page element 240px to the left.
+*/	
+.animating.left #page {
+	transform: translate3d( -240px, 0, 0 );
+	-webkit-transform: translate3d( -240px, 0, 0 );
+}
+
+/***
+* If the right class is present then transform
+* the #page element 240px to the right.
 */
-header {
-    background-color: #3b5998;
-    padding: 10px;
-    text-decoration: none;
-    position: fixed;
-    width: 100%;
-    z-index: 1;
-    -webkit-box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.4);
-    box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.4);
+.animating.right #page {
+	transform: translate3d( 240px, 0, 0 );
+	-webkit-transform: translate3d( 240px, 0, 0 );
 }
 
-/*
-using background color is important to cover the menu
-position absolute isset to cover the whole viewport
+/***
+* If the menu-visible class is present then
+* shift the #page 240px from the right edge
+* via position: absolute to keep it in the 
+* open position. When .animating, .left and
+* .right classes are not present the CSS
+* transform does not apply to #page.
 */
-#content {
-    background-color: #FFFFFF;
-    padding: 52px 10px 10px 10px;
-    position: relative;
-    width: auto;
-    height: 100%;
-    -webkit-box-shadow: -10px 0px 9px 0px rgba(0, 0, 0, 0.4);
-    box-shadow: -10px 0px 9px 0px rgba(0, 0, 0, 0.4);
-}
-
-/*
-the hamburger button with a little gradient effekt
-*/
-#hamburger {
-    border: 1px solid #374C77;
-    border-radius: 3px 3px 3px 3px;
-    cursor: pointer;
-    display: block;
-    height: 24px;
-    padding: 3px 4px 3px;
-    position: relative;
-    width: 25px;
-    background: #4569b2;
-    background: -moz-linear-gradient(top, #4569b2 0%, #4062a5 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #4569b2), color-stop(100%, #4062a5));
-    background: -webkit-linear-gradient(top, #4569b2 0%, #4062a5 100%);
-    background: -o-linear-gradient(top, #4569b2 0%, #4062a5 100%);
-    background: -ms-linear-gradient(top, #4569b2 0%, #4062a5 100%);
-    background: linear-gradient(to bottom, #4569b2 0%, #4062a5 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#4569b2', endColorstr='#4062a5', GradientType=0);
-}
-
-/*
-The white stripes in the hamburger button
-*/
-#hamburger div {
-    background-color: #fff;
-    border: 1px solid #eee;
-    border-radius: 2px 2px 2px 2px;
-    height: 2px;
-    margin-top: 3px;
-    width: 90%;
-}
-
-/*
-The navigation container in the background
-*/
-nav {
-    opacity: 0;
-    left: 0px;
-    top: 0px;
-    position: fixed;
-    z-index: 0;
-    width: 70%;
-    height: 100%;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    overflow-x: hidden;
-    overflow-y: auto;
-    background: #3e3c3d;
-    background: -moz-linear-gradient(top, #3e3c3d 0%, #2d2c2d 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #3e3c3d), color-stop(100%, #2d2c2d));
-    background: -webkit-linear-gradient(top, #3e3c3d 0%, #2d2c2d 100%);
-    background: -o-linear-gradient(top, #3e3c3d 0%, #2d2c2d 100%);
-    background: -ms-linear-gradient(top, #3e3c3d 0%, #2d2c2d 100%);
-    background: linear-gradient(to bottom, #3e3c3d 0%, #2d2c2d 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#3e3c3d', endColorstr='#2d2c2d', GradientType=0);
-}
-
-/*
-Style the navigation menu
-*/
-nav ul {
-    list-style: none;
-    margin: 0;
-    width: 100%;
-    padding: 0;
-}
-
-nav li {
-    position: relative;
-    font-size: 1em;
-    font-weight: bold;
-    border-bottom: 1px solid #222222;
-    border-top: 1px solid #444444;
-    padding: 15px;
-}
-
-nav li a {
-    color: #fff;
-    text-decoration: none;
-}
-
-/*
-The Layer that will be layed over the content
-so that the content is unclickable while menu is shown
-*/
-#contentLayer {
-    display: none;
-    height: 100%;
-    overflow-x: hidden;
-    overflow-y: auto;
-    position: absolute;
-    right: 0;
-    top: 0;
-    width: 30%;
-    z-index: 5;
+.menu-visible #page {
+	right: 240px;
 }
