--- a/plugins/redmine_mtr/app/views/mtr_welcome/mtr_index.html.erb
+++ b/plugins/redmine_mtr/app/views/mtr_welcome/mtr_index.html.erb
@@ -7,15 +7,9 @@
     <%= stylesheet_link_tag 'menu.css', :plugin => 'redmine_mtr' %>
 
     <%= javascript_include_tag "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" %>
-    <%= javascript_include_tag "https://code.jquery.com/ui/1.11.1/jquery-ui.min.js" %>
-    <%= javascript_include_tag "https://code.jquery.com/jquery-2.1.1.min.js" %>
-    <%= javascript_include_tag "menu.js" , :plugin => 'redmine_mtr' %>
-    <%= javascript_include_tag "jquery-2.1.0.min.js", :plugin => 'redmine_mtr' %>
 <% end %>
 
-<div class="modal show" tabindex="-1" aria-hidden="true">
-  <div id="container" class="col-sm-12">
-
+<div id="login-form" class="modal show" tabindex="-1" role="dialog" aria-hidden="true">
     <!--The Hamburger Button in the Header-->
     <ul id="menu">
       <li><a title="Home" href="/">Home</a></li>
@@ -26,11 +20,13 @@
     <div id="page">
       <header>
         <h1>My New Site</h1>
-        <a href="/mtr/logout" id="toggle-menu"><span class="glyphicon glyphicon-menu-hamburger"></span></a>
+        <a href="#" id="toggle-menu"><span class="glyphicon glyphicon-menu-hamburger"></span></a>
       </header>
       <%= form_tag(mtr_signout_path) do %>
-          <p><%= submit_tag l(:label_logout) %></p>
+          <%= submit_tag l(:label_logout) %>
       <% end %>
     </div>
-  </div>
-  </div>
+</div>
+
+<script src="/plugin_assets/redmine_mtr/javascripts/menu.js" type="text/javascript"></script>
+<script src="/plugin_assets/redmine_mtr/javascripts/jquery-2.1.0.min.js" type="text/javascript"></script>
