--- a/plugins/redmine_mtr/assets/stylesheets/menu.css
+++ b/plugins/redmine_mtr/assets/stylesheets/menu.css
@@ -42,7 +42,7 @@ html, body {
 	margin: 0;
 
 	list-style: none;
-	background: #333;
+	background: #C12E2A;
 	z-index: 10; /* Make sure the z-index is lower than the #page */
 }
 
