--- a/app/views/account/login.html.erb
+++ b/app/views/account/login.html.erb
@@ -32,7 +32,7 @@
         <% end %>
     </td>
     <td style="text-align:right;">
-        <input type="submit" name="login" value="<%=l(:button_login)%> &#187;" tabindex="5"/>
+        <input type="submit" name="mtr_login" value="<%=l(:button_login)%> &#187;" tabindex="5"/>
     </td>
 </tr>
 </table>
